--- a/SAGeometry/Base.lproj/Main.storyboard
+++ b/SAGeometry/Base.lproj/Main.storyboard
@@ -1,26 +1,78 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SwiftGeometry" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC" customClass="Graph" customModule="SwiftGeometry" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vzi-xj-vHH">
+                                <rect key="frame" x="0.0" y="23" width="375" height="78.5"/>
+                                <color key="backgroundColor" red="0.46820236410412358" green="0.96621346473693848" blue="0.86406265935021098" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            </view>
+                            <stackView contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="QJX-bm-Uwa">
+                                <rect key="frame" x="16" y="28" width="343" height="68.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZmR-vm-kwo">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="19.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <color key="textColor" red="0.96621346473693848" green="0.078755749259184951" blue="0.04086287507093337" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yZ2-fw-c7i">
+                                        <rect key="frame" x="0.0" y="24.5" width="343" height="19.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <color key="textColor" red="0.96621346473693848" green="0.078755749259184951" blue="0.04086287507093337" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UC5-88-jv2">
+                                        <rect key="frame" x="0.0" y="49" width="343" height="19.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <color key="textColor" red="0.96621346473693848" green="0.078755749259184951" blue="0.04086287507093337" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Vzi-xj-vHH" firstAttribute="height" secondItem="QJX-bm-Uwa" secondAttribute="height" constant="10" id="CBG-aC-0lg"/>
+                            <constraint firstItem="QJX-bm-Uwa" firstAttribute="centerY" secondItem="Vzi-xj-vHH" secondAttribute="centerY" id="FS5-ra-ZSq"/>
+                            <constraint firstItem="QJX-bm-Uwa" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="ISg-B8-Sgs"/>
+                            <constraint firstItem="Vzi-xj-vHH" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="JYr-QY-vkz"/>
+                            <constraint firstAttribute="trailing" secondItem="Vzi-xj-vHH" secondAttribute="trailing" id="Ntb-xf-zUj"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="QJX-bm-Uwa" secondAttribute="trailing" id="igz-UT-p4Q"/>
+                            <constraint firstItem="QJX-bm-Uwa" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="p9Q-g9-YNe"/>
+                            <constraint firstItem="QJX-bm-Uwa" firstAttribute="centerX" secondItem="Vzi-xj-vHH" secondAttribute="centerX" id="yoQ-k0-c8P"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="lineStatus" destination="UC5-88-jv2" id="fX7-Ra-KaL"/>
+                        <outlet property="pointStatus" destination="yZ2-fw-c7i" id="bFF-14-FrG"/>
+                        <outlet property="quadStatus" destination="ZmR-vm-kwo" id="7m6-NS-qBo"/>
+                        <outlet property="view" destination="8bC-Xf-vdC" id="Znp-M7-3Hn"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="32.799999999999997" y="38.23088455772114"/>
         </scene>
     </scenes>
 </document>
